--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lista de Livros - SB</h1>
     <h2>Educação Infantil</h2>
-    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-matematica/" target="_blank">Coleção Geração Alpha - 5ª edição, 2023 - Carlos N. C. de Oliveira, Felipe Fugita - (SM)</a>
+    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-matematica/" target="_blank">Coleção Geração Alpha - 5ª edição, 2023 - Carlos N. C. de Oliveira, Felipe Fugita - (SM)</a> <br/>
     <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-geografia/" target="_blank">Geografia - Amplitude 1ª Edição 2023 - Axé Silva, Jurandyr Ross - (BRASIL)</a>
     
 </body>
