--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livros Alunos - SB</title>
+    <js
 </head>
 <body>
     <h1>Lista de Livros - SB</h1>
-    <h2>Educação Infantil</h2>
-    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-matematica/" target="_blank">Coleção Geração Alpha - 5ª edição, 2023 - Carlos N. C. de Oliveira, Felipe Fugita - <strong>SM)<strong></a> <br/>
-    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-geografia/" target="_blank">Geografia - Amplitude 1ª Edição 2023 - Axé Silva, Jurandyr Ross - <strong>(BRASIL)</strong></a>
+    <h2>Ensino Fundamental Anos Finais - 7ª Ano - 2024 </h2>
+    <p style="line-height: 2;">
+    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-matematica/" target="_blank"> Matemática - Coleção Geração Alpha - 5ª edição, 2023 - Carlos N. C. de Oliveira, Felipe Fugita - <strong>(SM)<strong></a> <br/>
+    <a href="https://www.smeducacao.com.br/livros/ensino-fundamental-geracao-alpha-geografia/" target="_blank">Geografia - Amplitude 1ª Edição 2023 - Axé Silva, Jurandyr Ross - <strong>(BRASIL)</strong></a> <br/>
+    <a href="" target="_blank">Historia - Coleção Geração Alpha - 5ª Edição, 2023 - Valéria Vaz - <strong>(SM)</strong> </a> <br/>
+    <a href="" target="_blank">Ciências - Coleção Geração Alpha - 5ª Edição, 2023 - André Catani, Gustavo Isaac Killner, João Batista Aguilar - <strong>(SM)</strong></a> <br/>
+    <a href="" target="_blank">Arte - Rumos da Arte - 2ª Edição, 2022 - Mariana Lima Muniz, Maurilio Rocha, Rodrigo Vivas, Ana Cristina Carvalho Pereira - <strong>(SM)</strong></a> <br/>
+    <a href="" target="_blank">Inglês - Connections - 1ª Edição, 2023 - Renato Mendes Curto Junior, Mariana Cardieri Mendonça <strong>(SM)</strong></a> <br/>
+    <a href="" target="_blank">Coleção Tecnologia no Ensino Fundamental - 2ª Edição - 2022 José Ortega e Deigo Brandão - Volume 6 - Edição Reformulada - <strong>(KRIEDUC)</strong></a> <br/> </p>
 </body>
 </html>
